--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Crypto</title>
-  </head>
-  <body>
-    
-    <div id="root"></div>
 
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>CryptoNews</title>
+</head>
+
+<body>
+
+  <div id="root"></div>
+
+</body>
+
 </html>
